terraform/modules/workloads/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloudops-ingress
  namespace: cloudops
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /core/health
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80

          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 3001

          - path: /core/
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 3001

          - path: /ops/
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 3001
